--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0.0"
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
+        "vite": "^5.4.11"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.2.1",
+        "bootstrap": "^5.3.3",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.0",
+        "vue-sweetalert2": "^5.0.11"
     }
 }
