--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap": "^5.3.3",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
-        "vue-sweetalert2": "^5.0.11"
+        "vue-sweetalert2": "^5.0.11",
+        "vuex": "^4.1.0"
     }
 }
